--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -219,10 +219,10 @@
       height: 4.75rem;
       line-height: 4.75rem;
 
-      .icon {
-        &:before {
-          font-size: 1.75rem;
-        }
+      img {
+        width: 4.6rem;
+        height: 4.65rem;
+        border-radius: 100%;
       }
     }
 
